--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,5 +1,9 @@
 .App {
   text-align: center;
   height: 100vh;
-  overflow-y: hidden;
+  overflow: hidden;
+}
+
+html {
+  scroll-behavior: smooth;
 }
